RESOLVED FIXED91267
[BlackBerry] Text selection with touch hold does not start on text field in some cases
https://bugs.webkit.org/show_bug.cgi?id=91267
Summary [BlackBerry] Text selection with touch hold does not start on text field in s...
Yongxin Dai
Reported 2012-07-13 11:30:40 PDT
For example, text selection with touch hold does not work on Google search bar in desktop mode with Blackberry browser.
Attachments
Patch (3.26 KB, patch)
2012-07-13 12:15 PDT, Yongxin Dai
no flags
Yongxin Dai
Comment 1 2012-07-13 12:15:45 PDT
WebKit Review Bot
Comment 2 2012-07-16 07:54:14 PDT
Comment on attachment 152315 [details] Patch Clearing flags on attachment: 152315 Committed r122725: <http://trac.webkit.org/changeset/122725>
WebKit Review Bot
Comment 3 2012-07-16 07:54:19 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.