[BlackBerry] Text selection with touch hold does not start on text field in some cases https://bugs.webkit.org/show_bug.cgi?id=91267

Patch by Yongxin Dai <yodai@rim.com> on 2012-07-16
Reviewed by Antonio Gomes.

Input fields host node is by spec non-editable unless the field itself has content editable enabled.
We enable selection if the shadow tree for the input field is selectable.
PR # 173450

Reviewed Internally by Mike Fenton.

* Api/WebPage.cpp:
(BlackBerry::WebKit::WebPagePrivate::webContext):
* Api/WebPage.cpp:
(BlackBerry::WebKit::WebPagePrivate::webContext):

git-svn-id: svn://svn.chromium.org/blink/trunk@122725 bbb929c8-8fbe-4397-9dbb-9b2b20218538